--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0"
     },
+    "post-install-cmd": [
+        "php artisan clear-compiled",
+        "chmod -R 777 public/"
+    ],
     "require-dev": {
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
